# MCP

./: .gitignore
AgML/deployment/: Dockerfile  app.py  port.json  run_docker.ps1  run_docker.sh
AgML/mcp_output/: analysis.json  diff_report.md  workflow_summary.json
Analyze-stroke/deployment/: Dockerfile  app.py  port.json  requirements.txt  run_docker.ps1  run_docker.sh
Analyze-stroke/mcp_output/: README_MCP.md  analysis.json  diff_report.md
BPt/deployment/: Dockerfile  app.py  port.json  run_docker.ps1  run_docker.sh
BPt/mcp_output/: analysis.json  requirements.txt  workflow_summary.json
BioSPPy/deployment/: Dockerfile  app.py  port.json  requirements.txt  run_docker.ps1  run_docker.sh
BioSPPy/mcp_output/: analysis.json  diff_report.md  workflow_summary.json
EigenLedger/deployment/: Dockerfile  app.py  port.json  run_docker.ps1  run_docker.sh
EigenLedger/mcp_output/: analysis.json  diff_report.md  requirements.txt  workflow_summary.json
Foam-Agent/deployment/: Dockerfile  app.py  port.json  requirements.txt  run_docker.ps1  run_docker.sh
Foam-Agent/mcp_output/: analysis.json
GMatch4py/deployment/: Dockerfile  app.py  port.json  run_docker.ps1  run_docker.sh
GMatch4py/mcp_output/: README_MCP.md  analysis.json  requirements.txt  workflow_summary.json
GStools/deployment/: Dockerfile  app.py  port.json  requirements.txt  run_docker.ps1  run_docker.sh
GStools/mcp_output/: analysis.json  workflow_summary.json
MONAI/deployment/: Dockerfile  app.py  port.json  requirements.txt  run_docker.ps1  run_docker.sh
MetPy/deployment/: Dockerfile  app.py  port.json  requirements.txt  run_docker.ps1  run_docker.sh
MetPy/mcp_output/: diff_report.md
NeuroKit/deployment/: Dockerfile  app.py  port.json  requirements.txt  run_docker.ps1  run_docker.sh
NeuroKit/mcp_output/: README_MCP.md  analysis.json  diff_report.md  workflow_summary.json
PlasmaPy/deployment/: Dockerfile  app.py  port.json  run_docker.ps1  run_docker.sh
PlasmaPy/mcp_output/: README_MCP.md  analysis.json  diff_report.md  requirements.txt  workflow_summary.json
psychopy/deployment/psychopy/source/: README.md  __init__.py  pyproject.toml
psychopy/deployment/psychopy/source/building/: semanticVersion.py  setupPatch.sh
psychopy/deployment/psychopy/source/docs/: readme.md
psychopy/deployment/psychopy/source/psychopy/: colors.py  liaison.py
psychopy/deployment/psychopy/source/psychopy/demos/coder/stimuli/: stim3d.py
psychopy/deployment/psychopy/source/psychopy/experiment/: _experiment.py
psychopy/deployment/psychopy/source/psychopy/experiment/components/: _base.py
psychopy/deployment/psychopy/source/psychopy/experiment/components/buttonBox/: __init__.py
psychopy/deployment/psychopy/source/psychopy/experiment/components/serialOut/: __init__.py
psychopy/deployment/psychopy/source/psychopy/experiment/components/settings/: __init__.py
psychopy/deployment/psychopy/source/psychopy/experiment/components/slider/: __init__.py
psychopy/deployment/psychopy/source/psychopy/experiment/components/textbox/: __init__.py
psychopy/deployment/psychopy/source/psychopy/experiment/routines/: _base.py
psychopy/deployment/psychopy/source/psychopy/experiment/routines/audioValidator/: __init__.py
psychopy/deployment/psychopy/source/psychopy/hardware/: button.py  keyboard.py  manager.py
psychopy/deployment/psychopy/source/psychopy/hardware/camera/: __init__.py
psychopy/deployment/psychopy/source/psychopy/hardware/joystick/: __init__.py
psychopy/deployment/psychopy/source/psychopy/iohub/: errors.py
psychopy/deployment/psychopy/source/psychopy/preferences/: preferences.py
psychopy/deployment/psychopy/source/psychopy/tests/: test_Installation.py
psychopy/deployment/psychopy/source/psychopy/tests/test_data/: test_StairHandlers.py
psychopy/deployment/psychopy/source/psychopy/tests/test_experiment/: test_params.py  test_py2js.py
psychopy/deployment/psychopy/source/psychopy/tests/test_experiment/test_components/: test_ButtonBoxComponent.py
psychopy/deployment/psychopy/source/psychopy/tests/test_preferences/: test_prefs.py
psychopy/deployment/psychopy/source/psychopy/tests/test_sound/: test_hamming.py
psychopy/deployment/psychopy/source/psychopy/tests/test_tools/: test_arraytools.py
psychopy/deployment/psychopy/source/psychopy/tests/test_visual/: test_basevisual.py
psychopy/deployment/psychopy/source/psychopy/tools/: fontmanager.py  pkgtools.py
psychopy/deployment/psychopy/source/psychopy/visual/: image.py
psychopy/deployment/psychopy/source/psychopy/visual/backends/: pygletbackend.py
psychopy/deployment/psychopy/source/psychopy/visual/movies/: __init__.py
(+2436 files in other folders)
