
[project]
name = "psychopy"
dynamic = ["version"]
requires-python = ">=3.10, <3.12"
description = "PsychoPy provides easy, precise, flexible experiments in behavioural sciences"
readme ={file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Open Science Tools Ltd", email = "support@opensciencetools.org"},
]
maintainers = [
    {name = "Open Science Tools Ltd", email = "support@opensciencetools.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    ]
    
dependencies = [
    "numpy",
    "scipy",  # NB scipy 1.16 requires py311; 1.14 requires py310
    "matplotlib",
    "pyglet == 1.4.11; platform_system == \"Windows\"",
    "pyglet == 1.5.27; platform_system != \"Windows\"",
    "pillow>=9.4.0",
    "pyqt6",
    "pandas>=1.5.3",
    "questplus>=2023.1",
    "openpyxl",
    "xmlschema",
    # for core stimuli
    "soundfile",
    "imageio",
    "imageio-ffmpeg",
    "psychtoolbox<3.0.20; platform_machine!='arm64'",
    # for iohub
    "pywinhook; platform_system == \"Windows\"",
    "zope.event==5.0",  # py2app+gevent complains about zope.event 5.1
    "zope.interface==7.2",  # needed for gevent on macos
    "gevent==25.5.1",  # macos wheels for >2.5.1 are py3.12 only
    "MeshPy",
    "psutil",
    "pyzmq>=22.2.1",
    "ujson",
    "msgpack",
    "msgpack-numpy",
    "pyyaml",
    # for text formatting
    "freetype-py",
    "python-bidi",
    "arabic-reshaper",
    "websockets",  # new in 2023.2 for session.py
    # for the app
    "requests",
    # psychoJS conversions
    "astunparse",
    "esprima",
    "jedi >= 0.16",
    # hardware
    "pyserial",
    "pyparallel; platform_system != \"Darwin\"",
    # movie backends
    "ffpyplayer",
    "opencv-python",
    # platform specific
    "python-vlc == 3.0.11115; platform_system == \"Windows\"",
    "python-vlc >= 3.0.12118; platform_system != \"Windows\"",
    "pypiwin32; platform_system == \"Windows\"",
    "pyobjc-core > 8.0; platform_system == \"Darwin\"",
    "pyobjc-framework-Quartz > 8.0; platform_system == \"Darwin\"",
    "pyobjc > 8.0; platform_system == \"Darwin\"",
    "pyobjc-framework-ScriptingBridge > 8.0; platform_system == \"Darwin\"",
    "zeroconf; platform_system == \"Darwin\"",
    "python-xlib; platform_system == \"Linux\"",
    "distro; platform_system == \"Linux\"",
    'tables!=3.9.2',  # 3.9.2 crashes on Rosetta
    "packaging>=24.0",
    "moviepy",
    "pyarrow",
    "beautifulsoup4",
]

[project.optional-dependencies]  # This is optional dependencies
tests = [
    "pytest>=6.2.5",
    "pytest-codecov",
    "pytest-cov",
    "pytest-asyncio",
    "flake8",
    "xmlschema",
]
docs = [
    "sphinx",
    "jinja2",
    "sphinx-design",
    "sphinx-copybutton",
    "myst-parser",
    "sphinxcontrib.svg2pdfconverter",  # requires inkscape
    "psychopy-sphinx-theme",
]
building = [
    "bdist-mpkg>=0.5.0; platform_system == \"Darwin\"",
    "py2app; platform_system == \"Darwin\"",
    "dmgbuild; platform_system == \"Darwin\"",
    "polib",
]
suggested = [
    "sounddevice",
    "pylsl>=1.16.1", # lab streaming layer for general connectivity
    "xlwt",  # writing excel files with pandas
    "h5py",  # to read hdf5 files for analysis
    "tobii_research",
    "badapted>=0.0.3",
    "egi-pynetstation>=1.0.0",
    "pyxid2>=1.0.5",
    "Phidget22",
]
legacy = [
    "pyo>=1.0.3",
    "pyglfw",
    "pygame",
]

[project.urls]
Homepage = "https://www.psychopy.org/"
Download = "https://github.com/psychopy/psychopy/releases/"

[project.gui-scripts]
psychopy = "psychopy.app.psychopyApp:main"

[build-system]
requires = [
    "pdm-backend",
    "distro; platform_system == \"Linux\"",
    "tomlkit",
    "packaging",
    "six",  # for configobj
    "polib", # for compiling translation files (*.po)
    "typing-extensions",
]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = []
excludes = ["building/"]
#source-includes = ["tests/"]

[tool.pdm.version]
source = "call"
getter = "psychopy.__init__:getVersion"

[tool.distutils.bdist_wheel]
universal = 1

[tool.psychopy]
src = ["psychopy"]
